Updated the styling for checkout and checkout success pages

--- a/checkout/static/checkout/css/checkout.css
+++ b/checkout/static/checkout/css/checkout.css
@@ -3,12 +3,14 @@
   box-sizing: border-box;
   height: 40px;
   padding: 10px 12px;
+  margin-bottom: .5rem;
   border: 1px solid transparent;
   border-radius: 0px;
   background-color: white;
   box-shadow: 0 1px 3px 0 #e6ebf1;
   -webkit-transition: box-shadow 150ms ease;
   transition: box-shadow 150ms ease;
+  width: 100%;
 }
 
 .StripeElement--focus,
@@ -23,4 +25,8 @@
 
 .stripe-style-input::placeholder {
     color: #aab7c4;
+}
+
+legend {
+  font-size: 1rem;
 }
