--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -6,18 +6,18 @@
 
 {% block content %}
 <div class="overflow-hidden position-relative py-4 bg-gray">
-  <div class="text-center text-uppercase col-12">
+  <div class="text-center text-uppercase text-black col-12">
     <h3 class="mb-3">Shopping Bag</h3>
     <hr class="bg-black my-0">
     {% if bag_items %}
-    <div class="table-responsive rounded col-12 offset-xl-2 col-xl-8 p-0">
+    <div class="table-responsive rounded col-12 offset-xl-2 col-xl-8 p-0 mt-3">
       <table class="table table-sm table-borderless">
-        <thead class="text-black">
+        <thead>
           <tr class="text-small">
             <th scope="col">Product Info</th>
             <th scope="col"></th>
             <th scope="col">Qty</th>
-            <th scope="col text-right">Subtotal</th>
+            <th scope="col">Subtotal</th>
           </tr>
         </thead>
         <tbody>
