--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -9,72 +9,75 @@
 {% block extended_title %}| Checkout{% endblock %}
 
 {% block content %}
-<div class="overlay"></div>
-<div class="container">
+<div class="overflow-hidden position-relative text-black py-4 bg-gray">
     <div class="row">
-        <div class="col">
-            <hr>
-            <h2 class="mb-4">Checkout</h2>
-            <hr>
+        <div class="text-center text-uppercase col-12">
+            <h3 class="mb-3">Checkout</h3>
+            <hr class="bg-black my-0">
         </div>
     </div>
 
-    <div class="row">
-        <div class="col-12 col-lg-6 order-lg-last mb-5">
-            <p class="text-muted">Order Summary ({{ product_count }})</p>
-            <div class="row">
-                <div class="col-7 offset-2">
-                    <p class="mb-1 mt-0 small text-muted">Item</p>
-                </div>
-                <div class="col-3 text-right">
-                    <p class="mb-1 mt-0 small text-muted">Subtotal</p>
-                </div>
-            </div>
-            {% for item in bag_items %}
-            <div class="row">
-                <div class="col-2 mb-1">
-                    {% if item.product.image %}
-                    <img class="w-100" src="{{ item.product.image.url }}" alt="{{ product.name }}">
-                    {% else %}
-                    <img class="w-100" src="{{ MEDIA_URL }}noimage.png" alt="{{ product.name }}">
-                    {% endif %}
-                </div>
-                <div class="col-7">
-                    <p class="my-0"><strong>{{ item.product.name }}</strong></p>
-                    <p class="my-0 small">Size:
-                        {% if item.product.has_sizes %}{{ item.size|upper }}{% else %}N/A{% endif %}</p>
-                    <p class="my-0 small text-muted">Qty: {{ item.quantity }}</p>
-                </div>
-                <div class="col-3 text-right">
-                    <p class="my-0 small text-muted">${{ item.product.price | calc_subtotal:item.quantity }}</p>
-                </div>
-            </div>
-            {% endfor %}
-            <hr class="my-0">
-            <div class="row text-black text-right">
-                <div class="col-7 offset-2">
-                    <p class="my-0">Order Total:</p>
-                    <p class="my-0">Delivery:</p>
-                    <p class="my-0">Grand Total:</p>
-                </div>
-                <div class="col-3">
-                    <p class="my-0">${{ total | floatformat:2 }}</p>
-                    <p class="my-0">${{ delivery | floatformat:2 }}</p>
-                    <p class="my-0"><strong>${{ grand_total | floatformat:2 }}</strong></p>
-                </div>
+    <div class="row mt-3">
+        <div class="col-12 col-lg-6 order-lg-last px-4 pl-lg-0">
+            <p class="text-uppercase px-4">Order Summary ({{ product_count }})</p>
+            <div class="table-responsive rounded col-12 p-0">
+              <table class="table table-sm table-borderless text-black">
+                <thead>
+                  <tr class="text-small text-center">
+                    <th scope="col">Product Info</th>
+                    <th scope="col"></th>
+                    <th scope="col">Qty</th>
+                    <th scope="col">Subtotal</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  {% for item in bag_items %}
+                  <tr>
+                    <td class="p-3 col-4 col-md-3">
+                      <img class="img-fluid rounded" src="{{ item.product.image.url }}">
+                    </td>
+                    <td class="py-3 text-left d-flex justify-content-between">
+                      <div>
+                        <p class="my-0"><strong>{{ item.product.name }}</strong></p>
+                        {% if item.size %}
+                        <p class="my-0"><strong>Size: </strong>{{ item.size|upper }}</p>
+                        {% endif %}
+                        <p class="my-0 text-small font-weight-normal text-muted">SKU: {{ item.product.sku|upper }}</p>
+                      </div>
+                    </td>
+                    <td class="py-3 col-1 text-center">
+                        <p class="my-0">{{ item.quantity }}</p>
+                    </td>
+                    <td class="py-3 text-right col-1">
+                      <!-- Price -->
+                      <p class="my-0">£{{ item.product.price }}</p>
+                      <!-- Subtotal -->
+                      <p class="my-0">£{{ item.product.price | calc_subtotal:item.quantity }}</p>
+                    </td>
+                  </tr>
+                  {% endfor %}
+                  <tr>
+                    <td colspan="5" class="pt-5 text-right">
+                      <h6><strong>Order Total: £{{ total|floatformat:2 }}</strong></h6>
+                      <h6>Delivery: £{{ delivery|floatformat:2 }}</h6>
+                      <h4 class="mt-4"><strong>Grand Total: £{{ grand_total|floatformat:2 }}</strong></h4>
+                    </td>
+                  </tr>
+                </tbody>
+              </table>
             </div>
         </div>
-        <div class="col-12 col-lg-6">
-            <p class="text-muted">Please fill out the form below to complete your order</p>
+        <div class="col-12 col-lg-6 px-4 pr-lg-0">
+            <p class="px-4">Please fill out the form below to complete your order</p>
             <form action="{% url 'checkout' %}" method="POST" id="payment-form">
                 {% csrf_token %}
-                <fieldset class="rounded px-3 mb-5">
-                    <legend class="fieldset-label small text-black px-2 w-auto">Details</legend>
+                <fieldset class="rounded px-3 mb-3">
+                    <legend class="fieldset-label px-2 w-auto">Details</legend>
                     {{ order_form.customer_name | as_crispy_field }}
                     {{ order_form.customer_email | as_crispy_field }}
                 </fieldset>
-                <fieldset class="rounded px-3 mb-5">
-                    <legend class="fieldset-label small text-black px-2 w-auto">Delivery</legend>
+                <fieldset class="rounded px-3 mb-3">
+                    <legend class="fieldset-label px-2 w-auto">Delivery</legend>
                     {{ order_form.customer_address1 | as_crispy_field }}
                     {{ order_form.customer_address2 | as_crispy_field }}
                     {{ order_form.customer_city | as_crispy_field }}
@@ -82,11 +85,11 @@
                     {{ order_form.customer_postcode | as_crispy_field }}
                     {{ order_form.customer_country | as_crispy_field }}
                     {{ order_form.customer_phone | as_crispy_field }}
-                    <div class="form-check form-check-inline float-right mr-0">
+                    <div class="float-right mr-0">
                         {% if user.is_authenticated %}
                         <label class="form-check-label" for="id-save-info">Save this delivery information to my
                             profile</label>
-                        <input class="form-check-input ml-2 mr-0" type="checkbox" id="id-save-info" name="save-info"
+                        <input class="form-check-input ml-2 mr-0 position-relative" type="checkbox" id="id-save-info" name="save-info"
                             checked>
                         {% else %}
                         <label class="form-check-label" for="id-save-info">
@@ -97,7 +100,7 @@
                     </div>
                 </fieldset>
                 <fieldset class="px-3">
-                    <legend class="fieldset-label small text-black px-2 w-auto">Payment</legend>
+                    <legend class="fieldset-label px-2 w-auto">Payment</legend>
                     <!-- A Stripe card element will go here -->
                     <div class="mb-3" id="card-element"></div>
 
@@ -105,24 +108,24 @@
                     <div class="mb-3 text-danger" id="card-errors" role="alert"></div>
                 </fieldset>
 
-                <div class="submit-button text-right mt-5 mb-2">
-                    <a href="{% url 'view_bag' %}" class="btn btn-outline-black rounded-0">
+                <div class="submit-button text-right my-3">
+                    <a href="{% url 'view_bag' %}" class="btn-gray rounded-0 mr-0">
                         <span class="icon">
                             <i class="fas fa-chevron-left"></i>
                         </span>
                         <span class="font-weight-bold">Adjust Bag</span>
                     </a>
-                    <button id="submit-button" class="btn btn-black rounded-0">
+                    <button id="submit-button" class="btn-gray rounded-0">
                         <span class="font-weight-bold">Complete Order</span>
                         <span class="icon">
                             <i class="fas fa-lock"></i>
                         </span>
                     </button>
-                    <p class="small text-danger my-0">
+                    <p class="small text-danger mt-2 mb-0 mr-3">
                         <span class="icon">
                             <i class="fas fa-exclamation-circle"></i>
                         </span>
-                        <span>Your card will be charged <strong>${{ grand_total|floatformat:2 }}</strong></span>
+                        <span>Your card will be charged <strong>£{{ grand_total|floatformat:2 }}</strong></span>
                     </p>
                 </div>
             </form>
