--- a/checkout/templates/checkout/checkout_success.html
+++ b/checkout/templates/checkout/checkout_success.html
@@ -12,7 +12,7 @@
     <div class="text-center text-uppercase col-12">
         <h3 class="mb-3">Thank You</h2>
             <hr class="bg-black my-0">
-            <p class="mt-3 mb-0">Your order information is below. A confirmation email will be sent to
+            <p class="mt-3 mb-0">You can find your order details below. We'll email a confirmation to
                 <strong>{{ order.customer_email }}</strong>.</p>
     </div>
 </div>
