--- a/checkout/static/checkout/css/checkout.css
+++ b/checkout/static/checkout/css/checkout.css
@@ -31,6 +31,16 @@ legend {
   font-size: 1rem;
 }
 
+select,
+select option {
+  color: #000000;
+}
+
+select:invalid,
+select option[value=""] {
+  color: #aab7c4 !important;
+}
+
 #loading-overlay {
   display: none;
   position: fixed;
