--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -136,7 +136,7 @@
 <div id="loading-overlay">
     <h1 class="text-light loading-spinner">
         <span class="icon">
-            <i class="fas fa-3x fa-sync-alt fa-spin"></i>
+            <i class="fa-solid fa-spinner fa-spin fa-3x"></i>
         </span>
     </h1>
 </div>
