--- a/templates/allauth/account/login.html
+++ b/templates/allauth/account/login.html
@@ -1,37 +1,48 @@
-{% extends 'base.html' %}
-{% load static %}
-{% load allauth i18n %}
-{% load account socialaccount %}
-
-{% block extended_title %}| Sign In{% endblock %}
-
+{% extends "account/base_entrance.html" %}
+{% load i18n %}
+{% load allauth account %}
+{% block head_title %}
+    {% trans "Sign In" %}
+{% endblock head_title %}
 {% block content %}
-<div class="overflow-hidden position-relative py-4 bg-gray">
-    <div class="text-uppercase col-12">
-        <div class="row">
-            <div class="col-12 text-center">
-                <h3 class="mb-3">{% trans "Sign In" %}</h3>
-                <hr class="bg-black my-0">
-                <p class="mt-3">
-                    {% blocktrans %}
-                    If you have not created an account yet, then please <a class="link" href="{{ login_url }}">sign up</a> first.
-                    {% endblocktrans %}
-                </p>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-lg-5 mx-auto text-center">
-                <form class="login" id="login_form" method="post" action="{% url 'account_login' %}">
-                    {% csrf_token %}
-                    {{ form.as_p }}
-                    {% if redirect_field_value %}
-                    <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
-                    {% endif %}
-                    <button class="btn-gray" type="submit">
-                        {% trans "Sign In" %}</button>
-                </form>
-            </div>
-        </div>
-    </div>
-</div>
+    {% element h1 %}
+        {% trans "Sign In" %}
+    {% endelement %}
+    {% if not SOCIALACCOUNT_ONLY %}
+        {% setvar link %}
+            <a href="{{ signup_url }}">
+            {% endsetvar %}
+            {% setvar end_link %}
+            </a>
+        {% endsetvar %}
+        {% element p %}
+            {% blocktranslate %}If you have not created an account yet, then please {{ link }}sign up{{ end_link }} first.{% endblocktranslate %}
+        {% endelement %}
+        {% url 'account_login' as login_url %}
+        {% element form form=form method="post" action=login_url tags="entrance,login" %}
+            {% slot body %}
+                {% csrf_token %}
+                {% element fields form=form unlabeled=True %}
+                {% endelement %}
+                {{ redirect_field }}
+            {% endslot %}
+            {% slot actions %}
+                {% element button type="submit" tags="prominent,login" %}
+                    {% trans "Sign In" %}
+                {% endelement %}
+            {% endslot %}
+        {% endelement %}
+    {% endif %}
+    {% if LOGIN_BY_CODE_ENABLED %}
+        {% element hr %}
+        {% endelement %}
+        {% element h2 %}
+            {% element button href=request_login_code_url tags="prominent,login,secondary" %}
+                {% trans "Mail me a sign-in code" %}
+            {% endelement %}
+        {% endelement %}
+    {% endif %}
+    {% if SOCIALACCOUNT_ENABLED %}
+        {% include "socialaccount/snippets/login.html" with page_layout="entrance" %}
+    {% endif %}
 {% endblock content %}
