--- a/templates/allauth/account/logout.html
+++ b/templates/allauth/account/logout.html
@@ -1,32 +1,25 @@
-{% extends 'base.html' %}
-{% load static %}
+{% extends "account/base_manage.html" %}
 {% load allauth i18n %}
-{% load account socialaccount %}
-
-{% block extended_title %}| Sign Out{% endblock %}
-
+{% block head_title %}
+    {% trans "Sign Out" %}
+{% endblock head_title %}
 {% block content %}
-<div class="overflow-hidden position-relative py-4 bg-gray">
-    <div class="text-uppercase col-12">
-        <div class="row">
-            <div class="col-12 text-center">
-                <h3 class="mb-3">{% trans "Sign Out" %}</h3>
-                <hr class="bg-black my-0">
-                <p class="mt-3">{% trans 'Are you sure you want to sign out?' %}</p>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-lg-5 mx-auto text-center">
-                <form class="logout" id="logout_form" method="post" action="{% url 'account_logout' %}">
-                    {% csrf_token %}
-                    {% if redirect_field_value %}
-                    <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
-                    {% endif %}
-                    <button class="btn-gray" type="submit">
-                        {% trans "Sign Out" %}</button>
-                </form>
-            </div>
-        </div>
-    </div>
-</div>
+    {% element h1 %}
+        {% trans "Sign Out" %}
+    {% endelement %}
+    {% element p %}
+        {% trans 'Are you sure you want to sign out?' %}
+    {% endelement %}
+    {% url 'account_logout' as action_url %}
+    {% element form method="post" action=action_url no_visible_fields=True %}
+        {% slot body %}
+            {% csrf_token %}
+            {{ redirect_field }}
+        {% endslot %}
+        {% slot actions %}
+            {% element button type="submit" %}
+                {% trans 'Sign Out' %}
+            {% endelement %}
+        {% endslot %}
+    {% endelement %}
 {% endblock content %}
