--- a/templates/allauth/account/signup.html
+++ b/templates/allauth/account/signup.html
@@ -1,36 +1,38 @@
-{% extends 'base.html' %}
-{% load static %}
+{% extends "account/base_entrance.html" %}
 {% load allauth i18n %}
-
-{% block extended_title %}| Sign Up{% endblock %}
-
+{% block head_title %}
+    {% trans "Signup" %}
+{% endblock head_title %}
 {% block content %}
-<div class="overflow-hidden position-relative py-4 bg-gray">
-    <div class="text-uppercase col-12">
-        <div class="row">
-            <div class="col-12 text-center">
-                <h3 class="mb-3">{% trans "Sign Up" %}</h3>
-                <hr class="bg-black my-0">
-                <p class="mt-3">
-                    {% blocktrans %}
-                    Already have an account? Then please <a class="link" href="{{ login_url }}">sign in</a>.
-                    {% endblocktrans %}
-                </p>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-lg-5 mx-auto text-center">
-                <form class="signup" id="signup_form" method="post" action="{% url 'account_signup' %}">
-                    {% csrf_token %}
-                    {{ form.as_p }}
-                    {% if redirect_field_value %}
-                    <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
-                    {% endif %}
-                    <button class="btn-gray" type="submit">
-                        {% trans "Sign Up" %}</button>
-                </form>
-            </div>
-        </div>
-    </div>
-</div>
+    {% element h1 %}
+        {% trans "Sign Up" %}
+    {% endelement %}
+    {% setvar link %}
+        <a href="{{ login_url }}">
+        {% endsetvar %}
+        {% setvar end_link %}
+        </a>
+    {% endsetvar %}
+    {% element p %}
+        {% blocktranslate %}Already have an account? Then please {{ link }}sign in{{ end_link }}.{% endblocktranslate %}
+    {% endelement %}
+    {% if not SOCIALACCOUNT_ONLY %}
+        {% url 'account_signup' as action_url %}
+        {% element form form=form method="post" action=action_url tags="entrance,signup" %}
+            {% slot body %}
+                {% csrf_token %}
+                {% element fields form=form unlabeled=True %}
+                {% endelement %}
+                {{ redirect_field }}
+            {% endslot %}
+            {% slot actions %}
+                {% element button tags="prominent,signup" type="submit" %}
+                    {% trans "Sign Up" %}
+                {% endelement %}
+            {% endslot %}
+        {% endelement %}
+    {% endif %}
+    {% if SOCIALACCOUNT_ENABLED %}
+        {% include "socialaccount/snippets/login.html" with page_layout="entrance" %}
+    {% endif %}
 {% endblock content %}
