--- a/templates/base.html
+++ b/templates/base.html
@@ -146,7 +146,7 @@
               {% if request.user.is_superuser %}
               <a href="" class="text-black text-uppercase nav-link">Product Management</a>
               {% endif %}
-              <a href="" class="text-black text-uppercase nav-link">My Profile</a>
+              <a href="{% url 'profile' %}" class="text-black text-uppercase nav-link">My Profile</a>
               <a href="{% url 'account_logout' %}" class="text-black text-uppercase nav-link">Logout</a>
               {% else %}
               <a href="{% url 'account_signup' %}" class="text-black text-uppercase nav-link">Register</a>
