--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -15,5 +15,25 @@
             <hr class="bg-black my-0">
         </div>
     </div>
+    <div class="row mt-3">
+        <div class="col-12 col-lg-6 order-lg-last px-4 mb-3 pl-lg-0">
+            <p class="text-uppercase">Order History</p>
+            {{ orders }}
+        </div>
+        <div class="col-12 col-lg-6 px-4 pr-lg-0">
+            <p class="text-uppercase px-4">Default Delivery Information</p>
+            <form action="{% url 'profile' %}" method="POST" class="mt-3 px-3" id="profile-update-form">
+                {% csrf_token %}
+                {{ form|crispy }}
+                <button class="btn-gray float-right mt-3 mr-0">Update Information</button>
+            </form>
+        </div>
+    </div>
+    {{ profile }}
 </div>
+{% endblock %}
+
+{% block end_js %}
+    {{ block.super }}
+    <script type="text/javascript" src="{% static 'profiles/js/countryfield.js' %}"></script>
 {% endblock %}
