--- a/profiles/static/profiles/css/profile.css
+++ b/profiles/static/profiles/css/profile.css
@@ -1,3 +1,8 @@
+.order-history {
+    max-height: 386px; /* height of profile form and submit button */
+    overflow-y: auto;
+}
+
 #profile-update-form .form-control {
     color: #000000;
 }
