--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -18,7 +18,48 @@
     <div class="row mt-3">
         <div class="col-12 col-lg-6 order-lg-last px-4 mb-3 pl-lg-0">
             <p class="text-uppercase">Order History</p>
-            {{ orders }}
+            <div class="order-history table-responsive">
+                <table class="table table-sm table-borderless">
+                    <thead>
+                        <tr>
+                            <th>Order</th>
+                            <th>Date</th>
+                            <th>Items</th>
+                            <th>Total</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        {% for order in orders %}
+                            <tr class="small">
+                                <td class="col-2 small">
+                                    <a class="small" href="{% url 'order_history' order.order_number %}"
+                                    title="{{ order.order_number }}">
+                                        {{ order.order_number|truncatechars:6 }}
+                                    </a>
+                                </td>
+                                <td class="col-2 small">{{ order.order_date|date:"d/m/Y" }}</td>
+                                <td>
+                                    <ul class="list-unstyled">
+                                        {% for item in order.beer_line_items.all %}
+                                            <li class="small">
+                                                {{ item.beer.name }} x{{ item.quantity }}
+                                            </li>
+                                        {% endfor %}
+                                        {% for item in order.merch_line_items.all %}
+                                            <li class="small">
+                                                {% if item.merch_item_size %}
+                                                    Size {{ item.merch_item_size|upper }}
+                                                {% endif %}{{ item.merch_item.name }} x{{ item.quantity }}
+                                            </li>
+                                        {% endfor %}
+                                    </ul>
+                                </td>
+                                <td class="col-2 small">£{{ order.grand_total }}</td>
+                            </tr>
+                        {% endfor %}
+                    </tbody>
+                </table>
+            </div>
         </div>
         <div class="col-12 col-lg-6 px-4 pr-lg-0">
             <p class="text-uppercase px-4">Default Delivery Information</p>
