--- a/static/css/base.css
+++ b/static/css/base.css
@@ -289,7 +289,7 @@ th {
     .small {
         font-size: .6125rem;
     }
-    p, li, .text-small, a, button, label, legend {
+    p, li, th, .text-small, a, button, label, legend {
         font-size: 0.7rem;
     }
     h1 {
