Updated reset password allauth template to display correct button size

--- a/templates/allauth/account/password_reset.html
+++ b/templates/allauth/account/password_reset.html
@@ -18,7 +18,7 @@
         {{ form|crispy }}
         <div class="my-3">
             <a class="btn-gray text-white mx-0" href="{% url 'account_login' %}">Back to Login</a>
-            <input type="submit" value="{% trans 'Reset My Password' %}" />
+            <button type="submit">{% trans 'Reset My Password' %}</button>
         </div>
     </form>
 
