--- a/checkout/templates/checkout/checkout_success.html
+++ b/checkout/templates/checkout/checkout_success.html
@@ -200,7 +200,7 @@
                 <span class="icon">
                     <i class="fas fa-chevron-left"></i>
                 </span>
-                <span class="font-weight-bold">Back to Profile</span>
+                <span>Back to Profile</span>
             </a>
         </div>
     {% endif %}
