--- a/static/css/base.css
+++ b/static/css/base.css
@@ -276,6 +276,10 @@ th {
     background-color: #eee;
 }
 
+.title-border {
+    border-bottom: 3px solid #000000;
+}
+
 .width-fit-content {
     width: fit-content;
 }
