--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -22,7 +22,11 @@
       {% for beer in limited_edition_beers %}
       <div class="col-12 col-sm-6 col-md-4 h-100 product-container p-0 mx-4 mb-4 {% if forloop.counter > 2 %}d-none d-lg-flex{% endif %}">
         <div class="card border-0 align-items-center">
+          {% if beer.image %}
           <img src="{{ beer.image.url }}" class="card-img-top border-black my-2 product-image" alt="{{ beer.name }}">
+          {% else %}
+          <img src="{{ MEDIA_URL }}beers/no_beer.webp" class="card-img-top border-black my-2 product-image" alt="{{ beer.name }}">
+          {% endif %}
           <div class="card-body p-0">
             <h5 class="card-title my-0">{{ beer.name }}</h5>
             <p class="card-text">{{ beer.type }} / {{ beer.alcohol_content }}%</p>
@@ -70,7 +74,11 @@
       {% for merch_item in random_merch_items %}
       <div class="col-12 col-sm-6 col-md-4 h-100 product-container p-0 mx-4 mb-4 {% if forloop.counter > 2 %}d-none d-lg-flex{% endif %}">
         <div class="card border-0 align-items-center bg-gray">
+          {% if merch_item.image %}
           <img src="{{ merch_item.image.url }}" class="card-img-top border-black my-2 product-image" alt="{{ merch_item.name }}">
+          {% else %}
+          <img src="{{ MEDIA_URL }}merch/no_merch.webp" class="card-img-top border-black my-2 product-image" alt="{{ merch_item.name }}">
+          {% endif %}
           <div class="card-body p-0">
             <h5 class="card-title my-0">{{ merch_item.name }}</h5>
           </div>
