--- a/pages/templates/pages/about.html
+++ b/pages/templates/pages/about.html
@@ -60,7 +60,11 @@
       <div class="col-12 col-sm-6 col-md-4 h-100 product-container p-0 mx-4 mb-4 {% if forloop.counter > 2 %}d-none d-lg-flex{% endif %}">
         <a href="{% url 'beer_detail' beer.id %}" class="text-black hover-gray">
           <div class="card border-0 align-items-center">
+            {% if beer.image %}
             <img src="{{ beer.image.url }}" class="card-img-top border-black my-2 product-image" alt="{{ beer.name }}">
+            {% else %}
+            <img src="{{ MEDIA_URL }}beers/no_beer.webp" class="card-img-top border-black my-2 product-image" alt="{{ beer.name }}">
+            {% endif %}
             <div class="card-body p-0">
               <h5 class="card-title my-0">{{ beer.name }}</h5>
               <p class="card-text mb-2">{{ beer.type }} / {{ beer.alcohol_content }}%</p>
