--- a/inventory/templates/inventory/add_beer.html
+++ b/inventory/templates/inventory/add_beer.html
@@ -20,7 +20,13 @@
             <p class="text-uppercase px-4 mb-0 mb-lg-2">Add a Beer</p>
             <form action="{% url 'add_beer' %}" method="POST" class="mt-3 px-3" id="add-beer-form">
                 {% csrf_token %}
-                {{ form|crispy }}
+                {% for field in form %}
+                    {% if field.name != 'image' %}
+                        {{ field | as_crispy_field }}
+                    {% else %}
+                        {{ field }}
+                    {% endif %}
+                {% endfor %}
                 <div class="mt-3">
                     <a href="{% url 'beers' %}" class="btn-gray text-white mx-0">
                         <span class="icon">
@@ -34,4 +40,14 @@
         </div>
     </div>
 </div>
+{% endblock %}
+
+{% block end_js %}
+    {{ block.super }}
+    <script type="text/javascript">
+        $('#new-image').change(function() {
+            var file = $('#new-image')[0].files[0];
+            $('#filename').text(`Image will be set to: ${file.name}`);
+        });
+    </script>
 {% endblock %}
