Added privacy policy to website

--- a/templates/base.html
+++ b/templates/base.html
@@ -363,7 +363,7 @@
               </a>
             </li>
             <li class="p-0 m-0">
-              <a class="text-uppercase text-white" href="#">
+              <a class="text-uppercase text-white" href="{% url 'privacy_policy' %}">
                 Privacy Policy
               </a>
             </li>
