Added orders and returns and terms and conditions pages

--- a/templates/base.html
+++ b/templates/base.html
@@ -359,12 +359,12 @@
           </div>
           <ul class="list-unstyled my-0">
             <li class="p-0 m-0">
-              <a class="text-uppercase text-white" href="#">
+              <a class="text-uppercase text-white" href="{% url 'orders_and_returns' %}">
                 Orders and Returns
               </a>
             </li>
             <li class="p-0 m-0">
-              <a class="text-uppercase text-white" href="#">
+              <a class="text-uppercase text-white" href="{% url 'terms_and_conditions' %}">
                 Terms and Conditions
               </a>
             </li>
