Added age verification note to bag, checkout and confirmation email

--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -93,6 +93,14 @@
           </tr>
         </tbody>
       </table>
+      <p class="mt-0 mb-3 mx-4 small text-danger">
+          <span class="icon">
+              <i class="fas fa-exclamation-circle"></i>
+          </span>
+          <span><strong>Please note:</strong> Any products containing alcohol will require age verification
+              upon delivery. Please ensure you have a valid form of identification available when receiving
+              your order.</span>
+      </p>
     </div>
     {% else %}
     <p class="mt-3 mb-0">Your bag is empty.</p>
