--- a/pages/templates/pages/taproom.html
+++ b/pages/templates/pages/taproom.html
@@ -71,7 +71,7 @@
                 <div class="p-0" id="map-content">
                     <iframe width="100%" height="500" frameborder="0" class="border-0"
                         referrerpolicy="no-referrer-when-downgrade"
-                        src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCv43SBjRqDKNyLWKHmFIVe1E33p4DZ6Sk&q=HD11AA+England"
+                        src="https://www.google.com/maps/embed/v1/place?key={{ GOOGLE_MAPS_API_KEY }}&q=HD11AA+England"
                         allowfullscreen>
                     </iframe>
                 </div>
